# File-Manager-temp

./: .clang-tidy  CMakeLists.txt  CompileOptions.cmake  MainWindow.cpp  MainWindow.hpp  README.md  Tab.cpp  Tab.hpp  TabWidgetManager.cpp  TabWidgetManager.hpp  TableViewManager.cpp  TableViewManager.hpp  _macros.hpp  main.cpp  mainwindow.ui
